--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <h2>Analysis Report</h2>
 <div id="report"></div>
 </div>
+<h2>Search Results</h2>
 <div class="searchCondition">
     <div id="result"></div>
 </div>
